@startuml
class GameManagerStateMachine
class GameManager
class StateMachine
class CardStrengthGameState
class GamePlayingState
class GameClearState
class GameOverState
class GameReadyState
interface IState
class ScriptableObject

GameManager *-- GameManagerStateMachine

GameManagerStateMachine *-- CardStrengthGameState
GameManagerStateMachine --|> StateMachine

GamePlayingState --|> CardStrengthGameState
GameClearState --|> CardStrengthGameState
GameOverState --|> CardStrengthGameState
GameReadyState --|> CardStrengthGameState

CardStrengthGameState --|> IState
CardStrengthGameState --|> ScriptableObject

@enduml